++fix little break on style

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ body {
   padding: 1.5rem 4rem;
   border-radius: 100px;
   transition: all ease 0.2s;
-  font-size: ;
+  font-size: 1.6rem;
 
   position: relative;
 }
